@@ -17,7 +17,7 @@ public class FileReferenceDAO extends GenericDAO<FileReference> {
 
 		List<FileReference> result = StreamSupport.stream(queryResult.spliterator(), false)
 				.filter(r -> r.getDataObject() != null).filter(r -> r.getDataObject().getId().equals(dataObjectId))
-				.collect(Collectors.toList());
+				.toList();
 		return result;
 	}
 
